# risco2mqtt

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  ChangeLog.MD  LICENSE  README.md  config.toml.example  package.json
examples/: connect.rs  partition_commands.rs  zone_events.rs
schemas/mqtt/: command.schema.json  command_ack.schema.json  message.schema.json  partition_event.schema.json  partition_state.schema.json  snapshot.schema.json  zone_event.schema.json  zone_state.schema.json
src/: comm.rs  config.rs  constants.rs  crypto.rs  error.rs  event.rs  lib.rs  main.rs  panel.rs  protocol.rs
src/devices/: mod.rs  output.rs  partition.rs  system.rs  zone.rs
src/transport/: command.rs  direct.rs  discovery.rs  mod.rs  proxy.rs
test/: crypto.test.js  generate-vectors.js  run-tests.js
test/fixtures/: crc.json  decode.json  dle_edge_cases.json  encode.json  pseudo_buffer.json
tests/: compatibility.rs  mqtt_schema.rs
