[package]
name = "risco-lan-bridge"
version = "0.1.0"
edition = "2021"
description = "Direct TCP/IP communication with Risco alarm control panels"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
bitflags = "2"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
anyhow = "1"
