[package]
name = "risco-lan-bridge"
version = "0.20.0"
edition = "2024"
description = "Direct TCP/IP communication with Risco alarm control panels"
license = "MIT"

[[bin]]
name = "risco2mqtt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
bitflags = "2"
anyhow = "1"
rumqttc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
jsonschema = "0.41"
